[package]
name = "raytracing"
version = "0.1.0"
authors = ["Sébastien Besnier <sebastien.fabrice.besnier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.7"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
